Terraform/kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photo-gallery-frontend
  labels:
    app: photo-gallery-frontend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: photo-gallery-frontend

  template:
    metadata:
      labels:
        app: photo-gallery-frontend

    spec:
      containers:
        - name: frontend
          image: 279715467865.dkr.ecr.ap-south-2.amazonaws.com/photo-gallery-frontend:V2

          ports:
            - containerPort: 80

          imagePullPolicy: Always

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "250m"
              memory: "256Mi"
