Terraform/kubernetes/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: photo-gallery-backend-service

spec:
  selector:
    app: photo-gallery-backend

  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

  type: ClusterIP
