Terraform/kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photo-gallery-frontend-service

spec:
  selector:
    app: photo-gallery-frontend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: ClusterIP
